# vertical-farm-energy-designer

./: .gitattributes  .gitignore  AGENTS.md  BW_data.csv  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README2.md  README_zh.md  analyze_results.py  create_load_profiles.py  main.py  pyproject.toml  weather_processor.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
data/: README.md
docs/: _config.yml  intro.md  quickstart.md
idfs/: LIGHT_SCHEDULE_01_01.idf  LIGHT_SCHEDULE_02_02.idf  LIGHT_SCHEDULE_03_03.idf  LIGHT_SCHEDULE_04_04.idf  LIGHT_SCHEDULE_05_05.idf  LIGHT_SCHEDULE_06_06.idf  LIGHT_SCHEDULE_07_07.idf  LIGHT_SCHEDULE_08_08.idf  LIGHT_SCHEDULE_09_09.idf  LIGHT_SCHEDULE_10_10.idf  LIGHT_SCHEDULE_11_11.idf  LIGHT_SCHEDULE_12_12.idf  LIGHT_SCHEDULE_13_13.idf  LIGHT_SCHEDULE_14_14.idf  LIGHT_SCHEDULE_15_15.idf  LIGHT_SCHEDULE_16_16.idf  LIGHT_SCHEDULE_17_17.idf  LIGHT_SCHEDULE_18_18.idf  LIGHT_SCHEDULE_19_19.idf  LIGHT_SCHEDULE_20_20.idf  LIGHT_SCHEDULE_21_21.idf  LIGHT_SCHEDULE_22_22.idf  LIGHT_SCHEDULE_23_23.idf  LIGHT_SCHEDULE_24_24.idf  Template.audit  Template.bnd  Template.eio  Template.err  Template.expidf  Template.idf  Template.mtd  Template.mtr  Template.rvaudit  Template.shd  TemplateMeter.csv  TemplateZsz.csv  Template_NoEquip.idf  light_schedule_00.idf  light_schedule_01.idf  light_schedule_02.idf  (+30 more)
load_analysis/: analyze_hvac_load_profiles.py  cop_power_dist_fall.html  cop_power_dist_overall.html  cop_power_dist_spring.html  cop_power_dist_summer.html  cop_power_dist_winter.html  cop_power_distribution.csv  cop_rules.csv  cop_time_dist_fall.html  cop_time_dist_overall.html  cop_time_dist_spring.html  cop_time_dist_summer.html  cop_time_dist_winter.html  cop_time_distribution.csv  daily_energy_consumption.csv  daily_energy_consumption.html  energy_data_analysis.py  energy_data_extract.py  energy_data_utils.py  power_flow_plots.py  power_range_cop_stats.csv  process_fau_schedule.py  seasonal_cop_stats.csv  seasonal_cop_values.csv  seasonal_cop_with_std.html  seasonal_correlations.csv  seasonal_correlations.html  seasonal_distributions_loads.html  seasonal_distributions_outdoor.html  seasonal_distributions_power.html  seasonal_energy_averages.csv  seasonal_energy_consumption.html  seasonal_energy_consumption_styled.html  seasonal_energy_stats.csv  seasonal_mean_cop.html  seasonal_power_averages.csv  seasonal_power_consumption.html  seasonal_statistics.csv  temp.html
output/: annual_energy_profile.csv  converted_energy_profile.csv  fall.audit  fall.bnd  fall.eio  fall.end  fall.err  fall.expidf  fall.mtr  fall.rvaudit  fallMeter.csv  fallZsz.csv
src/: __init__.py  agent.py  agent_runner.py  battery.py  calibrator.py  cli.py  idf_builder.py  optimizer.py  system.py  utils.py  visualization.py
tests/: __init__.py  test_agent.py  test_battery.py  test_optimizer.py  test_system.py  test_utils.py
weather/: Chongming_2024.epw  Modified_Shanghai.epw  São Paulo_2024.csv  __init__.py  beijing_2024.csv  chongqing_2024.csv  city_coordinates.json  city_coordinates.py  dubai_2024.csv  dubai_2024.epw  (+25 more)
(+851 files in other folders)
