[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "opencrops"
version = "1.0.0"
description = "Climate-Responsive Optimizer for Plant Systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Thomas XIONG", email = "thomas-xiong@sjtu.edu.cn" }
]
keywords = [
    "photovoltaic",
    "battery",
    "optimization",
    "plant-factory",
    "pfal",
    "energy",
    "renewable-energy"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "plotly>=4.14.0",
    "scikit-learn>=0.24.0",
    "deap>=1.3.0",
    "scipy>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
docs = [
    "jupyter-book>=0.13",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
gpu = [
    "numba>=0.54.0",
    "cudatoolkit>=11.0",
]
all = [
    "numba>=0.54.0",
    "jupyter-book>=0.13",
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.0",
]

[project.urls]
Homepage = "https://github.com/ThomasXIONG151215/OpenCROPS"
Documentation = "https://opencrops.readthedocs.io"
Repository = "https://github.com/ThomasXIONG151215/OpenCROPS.git"
Issues = "https://github.com/ThomasXIONG151215/OpenCROPS/issues"
Discussions = "https://github.com/ThomasXIONG151215/OpenCROPS/discussions"

[project.scripts]
opencrops = "main:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/data",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opencrops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "docs/"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "docs/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
